<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    >


<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="38sp"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_version"
        android:textSize="20sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_license"
        android:textSize="20sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:textSize="18sp"
        android:autoLink="email"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/about_source_blurb"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_url"
        android:textSize="16sp"
        android:autoLink="web"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />



    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/about_info"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />


    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/about_info_more"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginBottom="12sp"
        />

    <TextView
        android:id="@+id/txt_review"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_review"
        android:textSize="20sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:textStyle="bold"
        android:layout_marginBottom="12sp"
        />

</LinearLayout>
</ScrollView>